--- a/style.css
+++ b/style.css
@@ -6,11 +6,12 @@
 
 nav{
 	display: flex;
-	justify-content: space-around;
-	align-items: right;
+	justify-content: space-between;
+	align-items: center;
 	min-height: 8vh;
 	background-color: #136727;
 	font-family: 'Indie Flower', cursive;
+	padding: 30px 10%;
 	
 }	
 
@@ -24,11 +25,10 @@ nav{
 	
 }
 .nav-links a{
-	display: flex;
-	justify-content: space-around;
+	display: inline;
+	justify-content: space-between;
 	width: 40%;
 	color: white;
-	text-align: right;
 	text-decoration: none;
 	letter-spacing: 3px;
 	font-weight: bold;
@@ -37,11 +37,13 @@ nav{
 	
 	
 	
+	
 }
 
 .nav-links li{
 	list-style-type: none;
-	text-align: right;
+	
+	
 	
 	
 }
