--- a/style.css
+++ b/style.css
@@ -47,6 +47,32 @@ nav{
 	color:#0088a9;
 }
 
+.app-text h1{
+	margin: 60px 0px 30px 40px;
+	padding: 20px;
+		
+}
+
+.app-text p{
+	margin: 30px 0px 30px 40px;
+	padding: 20px;
+	font-size: 20px;
+		
+}
+
+.app-picture {
+	width 50%;
+	float: right;
+	padding: 0px 50px;
+}
+
+.app-picture img {
+	width 100%;
+	padding: 0px 300px;
+	margin-top: -200px;
+	
+	
+}
 
 
 
